[metadata]
name = ags10
version = 1.0.0
author = Dennis Schulze
author_email = ds@dsc-it.de
description = AGS10 VOC sensor driver for Raspberry Pi using smbus2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DSound-lab/ags10
project_urls =
    Source = https://github.com/DSound-lab/ags10
    Tracker = https://github.com/DSound-lab/ags10/issues
license = MIT
license_files = LICENSE
keywords = AGS10, VOC, sensor, Raspberry Pi, smbus2, I2C, air quality
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: System :: Hardware :: Hardware Drivers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.7
install_requires =
    smbus2>=0.4.2

[options.packages.find]
exclude =
    tests
    examples

[options.extras_require]
dev =
    pytest
    flake8
    black
